# tripleo-puppet-elements

./: .gitignore  .gitreview  README.md  README.rst  requirements.txt  run-flake8  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst
elements/hiera/: 10-hiera-disable  40-hiera-datafiles  README.md  element-deps  pkg-map
elements/openssh/: README.md
elements/overcloud-agent/: README.md  package-installs.yaml  pkg-map
elements/overcloud-base/: README.md  pkg-map
elements/overcloud-ceph-storage/: README.md  pkg-map
elements/overcloud-cinder-volume/: README.md  pkg-map
elements/overcloud-compute/: README.md  pkg-map
elements/overcloud-contrail-controller/: README.md  element-deps  pkg-map
elements/overcloud-controller/: README.md  element-deps  package-installs.yaml  pkg-map
elements/overcloud-network-midonet/: README.md  element-deps  pkg-map  source-repository-overcloud-network-midonet
elements/overcloud-openstack-clients/: README.md  pkg-map
elements/overcloud-opstools/: README.md  pkg-map
elements/override-pip-and-virtualenv/: README.md
elements/puppet/: README.md  package-installs.yaml  pkg-map
elements/puppet-modules/: README.md  element-deps  package-installs.yaml  pkg-map  source-repository-puppet-modules
elements/remove-machine-id/: README.md
elements/remove-resolvconf/: README.md
elements/serverspec/: README.md  pkg-map
elements/setup-puppet/: 01-setup-puppet-repo-debian
elements/truncate-nova-config/: README.md
releasenotes/notes/: 6.0.0-0d097c704b6602e8.yaml  add-bgpvpn-driver-2e73a576e8e06363.yaml  add_networking_sfc-b8424bd6aa209b05.yaml  add_ptp-fbb1bc4bbed15e06.yaml  add_puppet_etcd-12b6c13a04137e2b.yaml  add_puppet_veritas_hyperscale-5a2139659d1afb6f.yaml  add_sasl_scram-94ef062b7f327d00.yaml  adds_puppet_systemd-fe0658caedfb342f.yaml  chrony-switch-12ffda0a7569df6a.yaml  disable-os-collect-config-5071858da0e8be7d.yaml  nova-cert-86fb2f0ddc53b032.yaml  openssh-79e2d39397761e74.yaml  puppet-odl-253735a2f2e920ff.yaml  remove-libvirt-deps-8994d3d325af0765.yaml  remove-overcloud-opstools-element-5846bee068294751.yaml  (+2 more)
zuul.d/: layout.yaml
(+52 files in other folders)
