[metadata]
name = tripleo-puppet-elements
summary = Puppet building rules for OpenStack images.
description-file =
    README.md
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
license = Apache License (2.0)
home-page = https://git.openstack.org/cgit/openstack/tripleo-puppet-elements
classifier =
    Environment :: OpenStack
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Other
    Environment :: Console

[files]
data_files =
    share/tripleo-puppet-elements = elements/*

[wheel]
universal = 1

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
