[metadata]
name = tripleo-puppet-elements
summary = Puppet building rules for OpenStack images.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
license = Apache License (2.0)
home-page = https://opendev.org/openstack/tripleo-puppet-elements
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Other
    Environment :: Console

[files]
data_files =
    share/tripleo-puppet-elements = elements/*
